--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,24 +1,39 @@
-<div class="container  d-flex justify-content-center align-items-center bgImage">
-  <div>
-    <h4 class="text-white text-center">Acceso al Configurador</h4>
-    <form [autocomplete]="user.autocomplete" (submit)="login()">
-      <div class="form-group mb-4">
-        <label for="email" class="form-label">Email de usuario</label>
-        <input type="text" [(ngModel)]="user.email" name="email" placeholder="Usuario" class="form-control" required autofocus>
-      </div>
-      <div class="form-group mb-2">
-        <label for="password" class="form-label">Contraseña</label>
-        <input type="password" [(ngModel)]="user.password" name="password" placeholder="Contraseña" class="form-control" required>
-      </div>
-      <div class="form-check mb-4">
-        <input #rembember type="checkbox" [checked]="user.remember" (change)="saveEmail(rembember.checked)" class="form-check-input" id="recordar" name="recordar">
-        <label class="form-check-label" for="recordar">Recordar</label>
-        <div #aviso class="text-danger ocultar">Usuario o contraseña incorrectos</div>
-      </div>
-      <div class="d-flex justify-content-center">
-        <button type="submit" class="btn btn-primary active">Login</button>
-      </div>
-    </form>
+<div class="container d-flex justify-content-center align-items-center bgImage">
+  <div class="d-flex row contenedor">
+    <div id="decoracion">
+      <img src="../../../assets/img/decoracion.svg">
+    </div>
+    <div id="formulario">
+      <form [formGroup]="userForm" (submit)="login()">
+        <h4 class="PoppinsBold mb-4">Inicio de sesión</h4>
+        <div class="form-group mb-4">
+          <label for="email" class="form-label PoppinsRegular">Correo electrónico</label>
+          <input formControlName="email" type="text"  name="email" class="form-control PoppinsRegular" required autofocus>
+          <div *ngIf="userForm.controls['email'].invalid && (userForm.controls['email'].dirty || userForm.controls['email'].touched)">
+            <p class="text-danger" *ngIf="userForm.controls['email'].errors!['required']">El campo "E-mail" es obligatorio</p>
+            <p class="text-danger" *ngIf="userForm.controls['email'].errors!['email']">Formato de email no válido</p>
+          </div>
+        </div>
+        <div class="form-group mb-2">
+          <label for="password" class="form-label PoppinsRegular">Contraseña</label>
+          <input formControlName="password" type="password" name="password" class="form-control PoppinsRegular" required>
+        </div>
+        <div class="form-check mb-2">
+          <input #rembember type="checkbox" [checked]="userForm.controls['remember'].value" (change)="saveEmail(rembember.checked)" class="form-check-input blueCoblie" id="recordar" name="recordar">
+          <label class="form-check-label" for="recordar">Recordar</label>
+          <p (click)="resetPass()" id="pass">He olvidado mi contraseña</p>
+        </div>
+        <p #aviso class="text-danger ocultar d-inline-block mb-3">Usuario o contraseña incorrectos</p>
+        <div class="d-flex justify-content-center mb-3">
+          <button type="submit" class="btn blueCoblie text-white">Entrar</button>
+        </div>
+        <div class="d-flex row justify-content-center">
+          <p class="width-auto PoppinsRegular">¿No tienes cuenta?</p>
+          <p routerLink="/register" class="width-auto PoppinsSemiBold cursor-pointer" style="color: #0029FF">Registrarse</p>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
+<app-footer></app-footer>
 
