--- a/frontend/src/app/pages/gallery/gallery.component.html
+++ b/frontend/src/app/pages/gallery/gallery.component.html
@@ -2,7 +2,7 @@
   <div (click)="abrirEditor()" class="row nuevaImagen shadow mb-5 cursor-pointer">
     <img class="icono" src="../../../assets/img/imagen.svg">
     <p>Nueva imagen</p>
-    <p>+</p>
+    <p class="ms-1 add">+</p>
   </div>
   <div [ngClass]="images.length > 4 ? 'justify-content-between': ''" class="row d-flex">
     <div class="col" class="tarjeta shadow" *ngFor="let image of images; let i = index">
