--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="position-relative">
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
-    <a routerLink="/landing" class="navbar-brand">
+    <a (click)="goToLink('landing')" class="navbar-brand">
       <img id="logo" src="../../../assets/img/logotipo.svg" alt="Logotipo de Cobli" class="d-inline-block align-text-top cursor-pointer">
     </a>
     <ng-container>
@@ -10,14 +10,14 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li *ngIf="isLoggedIn">
-            <a class="nav-link" routerLinkActive="active" routerLink="/gallery">Inicio</a>
+            <a class="nav-link" (click)="goToLink('gallery')">Inicio</a>
           </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
           <li *ngIf="isLoggedIn" class="nav-item active">
             <a (click)="showProfile()" class="nav-link cursor-pointer">{{name}}</a>
           </li>
-          <button *ngIf="!isLoggedIn" type="button" routerLinkActive="active" routerLink="/login" class="btn btn-primary">Iniciar sesión</button>
+          <button *ngIf="!isLoggedIn" type="button" (click)="goToLink('login')" class="btn btn-primary">Iniciar sesión</button>
           <li *ngIf="isLoggedIn" class="nav-item">
             <a class="nav-link" (click)="logout()">
               <img class="icon cursor-pointer" src="assets/img/exit.svg" alt="Icono de salir">
