--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -175,11 +175,12 @@ input[type='range']::-webkit-slider-thumb {
 }
 
 #canvas {
-  /* max-width: 100%;
-  max-height: 100%; */
-  /* width: 100%;
-  height: 100%; */
   image-rendering: auto;
+  z-index: 0;
+  outline: 0px;
+  position: absolute;
+  max-width: 100%;
+  height: auto;
 }
 
 .imgCanvas {
@@ -202,6 +203,7 @@ input[type='range']::-webkit-slider-thumb {
   width: 100%;
   height: 100%;
   position: absolute;
+  z-index: 1;
 }
 
 
