--- a/frontend/src/app/pages/gallery/gallery.component.css
+++ b/frontend/src/app/pages/gallery/gallery.component.css
@@ -30,11 +30,29 @@ p {
   height: 200px;
 }
 
+.tarjetaDiv {
+  padding: 20px;
+}
+
 .tarjeta {
   width: 360px;
   background-color: #f2f2f2;
-  margin-left: 20px;
   margin-right: 20px;
+  margin-bottom: 30px;
+}
+
+.tarjeta:first-child {
+  width: 360px;
+  background-color: #f2f2f2;
+  margin-right: 20px;
+  margin-bottom: 30px;
+}
+
+.tarjeta:last-child {
+  width: 360px;
+  background-color: #f2f2f2;
+  margin-right: 20px;
+  margin-bottom: 30px;
 }
 
 .tarjeta img {
