--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li *ngIf="isLoggedIn">
-            <a class="nav-link" (click)="goToLink('gallery')">Inicio</a>
+            <a class="nav-link cursor-pointer" (click)="goToLink('gallery')">Inicio</a>
           </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
