--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -269,3 +269,17 @@ table::-webkit-scrollbar-thumb {
   /* margin-left: 500px; */
   width: 550px;
 }
+
+
+.filters {
+  position: absolute;
+  width: max-content;
+  right: 20px;
+  top: 40px;
+  z-index: 5;
+  height: 200px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
+}
