--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -181,6 +181,7 @@ input[type='range']::-webkit-slider-thumb {
   position: absolute;
   max-width: 100%;
   height: auto;
+  max-height: 100%;
 }
 
 .imgCanvas {
